--- a/package.json
+++ b/package.json
@@ -1,20 +1,30 @@
 {
-  "name": "my-app",
+  "name": "shipment-tracking",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/i18next-browser-languagedetector": "^3.0.0",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-helmet": "^6.1.5",
+    "@types/react-router-dom": "^5.3.3",
+    "autoprefixer": "10.4.5",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "moment": "^2.29.3",
+    "qs": "^6.10.3",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
     "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
@@ -46,6 +56,8 @@
     ]
   },
   "devDependencies": {
-    "node-sass": "^7.0.1"
+    "i18next": "^21.8.5",
+    "node-sass": "^7.0.1",
+    "react-i18next": "^11.16.9"
   }
 }
